--- a/config.toml
+++ b/config.toml
@@ -21,6 +21,11 @@ title = "Calin's DevBlog"
   avatar = 'calinp@duck.com'
   name = 'Călin'
   bio = 'Embedded Software and Hardware Engineer'
+
+[params.umami]
+  enabled = true
+  websiteId = "9e4e7453-16c1-4f75-a356-1c2bacc13b4a"
+  jsLocation = "https://umami.calin.cloud/script.js"
 # ------------------------------
 
 # needed to  render raw HTML (e.g. <sub>, <sup>, <kbd>, <mark>)
