--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ enableInlineShortcodes = true
 ignoreErrors = ["error-remote-getjson"]
 
 # ------------------------------
-theme = "hugo-paper"
+theme = "hugo-theme-console"
 title = "Calin's DevBlog"
 
 [params]
